--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,55 +1,66 @@
 <%- include('./partials/header') %>
 
-<div class="w-full h-screen flex items-start px-20 py-20">
-  
-  <!-- Sidebar -->
-  <div class="w-[10%] h-full pr-4 flex flex-col items-start">
-    <div class="flex items-center gap-2">
-      <h3>Sort by</h3>
-      <form action="/shop">
-        <select class="border px-2 py-1" name="sortby">
-          <option value="popular">Popular</option>
-          <option value="newest">Newest</option>
-        </select>
-      </form>
+  <% if (success && success.length> 0) { %>
+    <div class="alert alert-success">
+      <%= success[0] %>
     </div>
+    <% } %>
 
-    <div class="flex flex-col mt-20">
-      <a class="block w-fit mb-2" href="">New Collection</a>
-      <a class="block w-fit mb-2" href="">All Products</a>
-      <a class="block w-fit mb-2" href="">Discounted Products</a>
-    </div>
+      <div class="w-full h-screen flex items-start px-20 py-20">
 
-    <div class="mt-32">
-      <a class="block w-fit mb-2" href="">Filter by:</a>
-      <a class="block w-fit mb-2" href="">Availability</a>
-      <a class="block w-fit mb-2" href="">Discount</a>
-    </div>
-  </div>
-
-  <!-- Products Grid -->
-  <div class="w-[90%] h-full overflow-y-auto flex flex-wrap gap-5 pb-15 p-4">
-    <% products.forEach(function(product){ %>
-      <div class="w-60 flex-shrink-0">
-        
-        <!-- Product Image -->
-        <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]">
-          <img class="max-h-full object-contain" src="data:image/jpeg;base64,<%= product.image.toString('base64') %>" alt="">
-        </div>
-        
-        <!-- Product Info -->
-        <div class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]">
-          <div>
-            <h3><%= product.name %></h3>
-            <h4>₹ <%= product.price %></h4>
+        <!-- Sidebar -->
+        <div class="w-[10%] h-full pr-4 flex flex-col items-start">
+          <div class="flex items-center gap-2">
+            <h3>Sort by</h3>
+            <form action="/shop">
+              <select class="border px-2 py-1" name="sortby">
+                <option value="popular">Popular</option>
+                <option value="newest">Newest</option>
+              </select>
+            </form>
           </div>
-          <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="">
-            <i class="ri-add-line"></i>
-          </a>
+
+          <div class="flex flex-col mt-20">
+            <a class="block w-fit mb-2" href="">New Collection</a>
+            <a class="block w-fit mb-2" href="">All Products</a>
+            <a class="block w-fit mb-2" href="">Discounted Products</a>
+          </div>
+
+          <div class="mt-32">
+            <a class="block w-fit mb-2" href="">Filter by:</a>
+            <a class="block w-fit mb-2" href="">Availability</a>
+            <a class="block w-fit mb-2" href="">Discount</a>
+          </div>
+        </div>
+
+        <!-- Products Grid -->
+        <div class="w-[90%] h-full overflow-y-auto flex flex-wrap gap-5 pb-15 p-4">
+          <% products.forEach(function(product){ %>
+            <div class="w-60 flex-shrink-0">
+
+              <!-- Product Image -->
+              <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>] ">
+                <img class="max-h-full object-contain"
+                  src="data:image/jpeg;base64,<%= product.image.toString('base64') %>" alt="">
+              </div>
+
+              <!-- Product Info -->
+              <div
+                class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]">
+                <div>
+                  <h3>
+                    <%= product.name %>
+                  </h3>
+                  <h4>₹ <%= product.price %>
+                  </h4>
+                </div>
+                <a class="w-7 h-7  flex items-center justify-center rounded-full bg-red-400" href="/addtoCart/<%=product._id %>">
+                  <i class=" ri-add-line"></i>
+                </a>
+              </div>
+            </div>
+            <% }) %>
         </div>
       </div>
-    <% }) %>
-  </div>
-</div>
 
-<%- include('./partials/footer') %>
+      <%- include('./partials/footer') %>
